2003-12-15  Carl Worth  <cworth@isi.edu>

	* src/cairo_ft_font.c (DOUBLE_TO_16_16): Fix minor errors in
	fixed/floating-point conversion.

	* src/cairoint.h: font->show_glyphs no longer accepts an offset
	point.

	* src/cairo_ft_font.c (_utf8_to_glyphs):
	(_cairo_ft_font_text_extents):
	(_cairo_ft_font_show_text):
	(_cairo_ft_font_text_path): _utf8_to_glyphs now accepts a point by
	which each glyph should be offset.
	(cairo_ft_font_backend): Remove evil void * casts on function
	pointers.

	* src/cairo_font.c (_cairo_font_show_glyphs): Fix to not require a
	current point.

	* src/cairo_gstate.c (_cairo_gstate_show_text):
	(setup_text_rendering_context): Move initialization of current
	device-space point from setup_text_rendering_context to
	_cairo_gstate_show_text.
	(_cairo_gstate_show_glyphs): Fix to not reference current point.

2003-12-12  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* src/Makefile.am: Add compatibility defines FONTCONFIG_LIBS,
	X_LIBS, XRENDER_LIBS to keep automake happy - they look like
	automake variable names.

2003-12-12  Carl Worth  <cworth@east.isi.edu>

	* src/cairo_font.c (_cairo_font_create): Add comment about
	building in a font.

	* src/cairo_ft_font.c (_cairo_ft_font_create): Check for NULL
	return value from cairo_ft_font_create.

	* src/cairo.h: 
	* src/cairo-features.h.in: 
	* src/Makefile.am (libcairo_ps_sources): Add conditionals for
	ps_surface functions, etc.

	* configure.in: Get rid of AC_PATH_XTRA. Instead, find X
	includes/libraries only via pkg-config xrender.
	Switch option from --without-x to --disable-xlib
	Add option --disable-ps

	* cairo.pc.in (Libs): Add -lz only if ps_surface backend is compiled.

	* src/cairo.h (__external_linkage): Add missing definitions from
	slim_import.h.

2003-12-11  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Rename surface->ic_image to
	surface->pixman_image.

	* src/cairo_image_surface.c
	(_cairo_image_surface_create_for_pixman_image):
	(_cairo_image_surface_create_with_masks):